@@ -1,0 +1,14 @@
+#pragma once
+
+
+class Timer
+{
+public:
+	Timer();
+	~Timer();
+	void reset();
+	int getTime();
+private:
+	int startTime;
+};
+
